[package]
name = "advent-2016"
version = "0.1.0"
authors = ["Adam Rodger <adam.rodger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10"
lazy_static = "1"
md5 = "0.7"
nom = "6"
regex = "1"
rayon = "1"

[dev-dependencies]
test-case = "1.1.0"
